# ucc-bench

./: .gitignore  DESIGN.md  README.md  TODO  pyproject.toml
.github/: README.md  dependabot.yml
.github/scripts/: benchmark_diff_comment.py  extract_ucc_revision.py  find_ancestor_sha.sh  plot_avg_by_time_benchmark.py  plot_latest_benchmark.py  post_benchmark_diff_comment.py  run_benchmarks.sh  run_benchmarks_pr.sh
.github/workflows/: plot_latest_benchmark.yml  run_benchmarks.yml  run_benchmarks_pr.yml  run_benchmarks_pr_post.yml  run_benchmarks_pr_ucc.yml  run_benchmarks_pr_ucc_bench.yml  test.yml  upgrade_ucc.yml
benchmarks/: compilation_benchmarks.toml  compilation_benchmarks_small.toml  layout_benchmarks.toml  observable_benchmarks.toml  simulation_benchmarks.toml  timing_benchmarks.toml
benchmarks/scripts/: README.md  generate_qasm.py
benchmarks/scripts/cirq_circuits/: circuits.py
results/: README.md
results/githubactions17/observable_benchmarks/20250403/: 20250403151359.a9a844b40151b1c201c5bdf264f8e37993e85708.compilation.csv  20250403151359.a9a844b40151b1c201c5bdf264f8e37993e85708.json  20250403151359.a9a844b40151b1c201c5bdf264f8e37993e85708.simulation.csv  20250403155709.05ce6294c27fd185661b48fdfb4009456efd7b28.compilation.csv  20250403155709.05ce6294c27fd185661b48fdfb4009456efd7b28.json  (+1 more)
results/ucc-benchmarks-8-core-U22.04/: README.md
results/ucc-benchmarks-8-core-U22.04/legacy/: README.md
results/ucc-benchmarks-8-core-U22.04/timing_benchmarks/: legacy_timing_results.csv
scripts/: run_benchmarks.sh
src/: README.md
src/ucc_bench/: __init__.py  main.py  observables.py  registry.py  results.py  runner.py  suite.py  target_devices.py  utils.py
src/ucc_bench/compilers/: __init__.py  base_compiler.py  cirq_compiler.py  pyqpanda3_compiler.py  pytket_compiler.py  qiskit_compiler.py  ucc_compiler.py  ucc_mps_compiler.py
src/ucc_bench/simulation/: __init__.py  heavy_output_prob.py  noise_models.py  observables.py
tests/: test_compilers.py  test_runner.py  test_simulation.py  test_suite.py
(+540 files in other folders)
