[project]
name = "ucc-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brad Chase", email = "brad@unitary.foundation" }
]
requires-python = ">=3.12"
dependencies = [
    "cirq>=1.4.1",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "pytket>=2.0.1",
    "qbraid>=0.9.4",
    "qiskit-aer>=0.17.0",
    "qiskit>=1.4.2",
    "ucc>=0.4.3",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "adjusttext>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
pyqpanda3 = [
    "pyqpanda3>=0.2.2",
]

[tool.uv.sources]
ucc = { git = "https://github.com/unitaryfoundation/ucc", rev = "1bbd9cdfbbaf58e434c1dab4ac3d7aecc19e86f3" }
[project.scripts]
ucc-bench = 'ucc_bench.main:main'
